...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        leading: IconButton(
          key: const Key('btn_back_aspirasi'),
          icon: const Icon(Icons.arrow_back),
          onPressed: () {
            Navigator.of(context).pop();
          },
        ),
        title: const Text(
          'Aspirasi Warga',
          style: TextStyle(fontWeight: FontWeight.bold, color: Colors.white),
        ),
        backgroundColor: AppColors.primary,
        centerTitle: true,
        iconTheme: const IconThemeData(
          color: Colors.white, 
        ),
        actions: [
          IconButton(
            key: const Key('btn_filter'),
            icon: Icon(
              _showFilter ? Icons.filter_alt_off : Icons.filter_alt,
              color: Colors.white,
            ),
            onPressed: () => setState(() => _showFilter = !_showFilter),
          ),
...
      ),
    floatingActionButton: BlocBuilder<AspirasiBloc, AspirasiState>(
        builder: (context, state) {
          final role = context.read<AspirasiBloc>().currentRole;
          if (role == "Warga") {
            return FloatingActionButton(
               key: const Key('fab_add_pesan'),
              backgroundColor: AppColors.primary,
              child: Icon(Icons.add, color: Colors.white),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
...
                  child: Column(
                    children: [
                      Row(
                        mainAxisAlignment: MainAxisAlignment.spaceBetween,
                        children: [
                          const Text(
                            "Filter",
                            style: TextStyle(
                              fontWeight: FontWeight.bold,
                              fontSize: 16,
                            ),
                          ),
                          IconButton(
...
                      ),
                      const SizedBox(height: 20),
                      Row(
                        mainAxisAlignment: MainAxisAlignment.end,
                        children: [
                          OutlinedButton(
                            key: const Key('filter_reset_button'),
                            onPressed: () {
                              setState(() {
                                _searchController.clear();
                                _dariController.clear();
                                _sampaiController.clear();
                                appliedStatus = null;
...
                              });
                            },
                            child: const Text("Reset Filter"),
                          ),
                          const SizedBox(width: 12),
                          ElevatedButton(
                            key: const Key('filter_apply_button'),
                            onPressed: () {
                              setState(() {
                                appliedStatus = tempStatus;
                                appliedStartDate = tempStart;
                                appliedEndDate = tempEnd;
                              });
...
                                    }
                                  }
                                },
                                itemBuilder: (_) => const [
                                  PopupMenuItem(
                                    value: 'detail',
                                    child: Text("Detail"),
                                  ),
                                  PopupMenuItem(
                                    value: 'delete',
                                    child: Text("Hapus"),
                                  ),
                                ],
...
