...
                          style: Theme.of(context).textTheme.titleMedium,
                        ),
                        const SizedBox(height: 8),

                        // EMAIL FIELD
                        TextField(
                          key: const Key('input_email'),
                          controller: _emailController,
                          cursorColor: AppColors.primary,
                          // Hapus error saat user mengetik
                          onChanged: (value) {
                            if (_emailError != null) {
                              setState(() => _emailError = null);
...
                          style: Theme.of(context).textTheme.titleMedium,
                        ),
                        const SizedBox(height: 6),

                        // PASSWORD FIELD
                        TextField(
                          key: const Key('input_password'),
                          controller: _passwordController,
                          cursorColor: AppColors.primary,
                          obscureText: true,
                          onChanged: (value) {
                            // Hapus error password & confirm saat mengetik
                            if (_passwordError != null) {
...
                        ),

                        const SizedBox(height: 30),

                        // LOGIN BUTTON
                        SizedBox(
                          key: const Key('login_btn'),
                          width: double.infinity,
                          child: ElevatedButton(
                            key: const Key('btn_login'),
                            style: ElevatedButton.styleFrom(
                              foregroundColor: Colors.white,
                            ),
...
