...
            ),
          ),
          ExpansionTile(
            leading: const Icon(Icons.dashboard_outlined),
            title: const Text('Dashboard'),
            children: <Widget>[
              _buildSubMenu('Keuangan', context, routeName: '/keuangan'),
              _buildSubMenu('Kegiatan', context, routeName: '/kegiatan'),
              _buildSubMenu(
                'Kependudukan',
                context,
                routeName: '/kependudukan',
              ),
            ],
...
